--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,11 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+
+    implementation libs.room.runtime
+    annotationProcessor libs.room.compiler
+
+    implementation libs.lifecycle.livedata
+    implementation libs.lifecycle.viewmodel
+
 }
