Complete B3: Excursion CRUD, Alerts, and Manifest Updates

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         <receiver android:name=".ui.AlertReceiver"/>
         <activity android:name=".ui.VacationListActivity"/>
         <activity android:name=".ui.VacationDetailActivity" />
+        <activity android:name=".ui.ExcursionListActivity" />
+        <activity android:name=".ui.ExcursionDetailActivity" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
